# toggl-track-slack-digest

./: .env.example  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: weekly_digest.yml
src/toggl_track_slack_digest/: __init__.py  config.py  constants.py  formatter.py  main.py  slack_client.py  toggl_client.py
tests/: conftest.py  test_config.py  test_formatter.py  test_slack_client.py  test_toggl_client.py
