[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toggl-track-slack-digest"
version = "0.1.0"
description = "Fetches weekly Toggl Track time entries and posts a Markdown digest to Slack."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "responses==0.25.3",
    "black==24.10.0",
    "mypy==1.13.0",
    "types-requests==2.32.0.20241016",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["toggl_track_slack_digest"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
